Fix for iOS home indicator overlapping the UI.

--- a/web/pwa/src/app/page/settings/settings.page.scss
+++ b/web/pwa/src/app/page/settings/settings.page.scss
@@ -27,3 +27,7 @@ h1 {
 ion-item {
     --background: none;
 }
+
+ion-select {
+    margin-right: 0.5em;
+}
